k8s/minikube/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketly
  labels:
    app.kubernetes.io/name: ticketly
    app.kubernetes.io/environment: minikube
