k8s/minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ticketly-api
  namespace: ticketly
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: api.dpiyumal.me
      http:
        paths:
          - path: /api/event-seating(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-command-service
                port:
                  number: 8081
          - path: /api/event-query(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-query-service
                port:
                  number: 8082
          - path: /api/order(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-service
                port:
                  number: 8084
          - path: /api/scheduler(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: scheduler-service
                port:
                  number: 8085
    - host: kafka.dpiyumal.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
